[gd_scene load_steps=14 format=3 uid="uid://dnv7b6cskgvry"]

[ext_resource type="Script" path="res://host.gd" id="1_2xvqe"]
[ext_resource type="PackedScene" uid="uid://l6gdmhiolm14" path="res://UI Elements/UI.tscn" id="2_0ti17"]
[ext_resource type="Script" path="res://command_manager.gd" id="3_d50m1"]
[ext_resource type="PackedScene" uid="uid://c3sft7tqbtjbw" path="res://units/controllable_units/basic_ship.tscn" id="4_thblo"]
[ext_resource type="PackedScene" uid="uid://bj8366tncnq00" path="res://environment/asteroid_gnome_flesh.tscn" id="6_p1jjs"]
[ext_resource type="PackedScene" uid="uid://yqws2uh1kpfj" path="res://environment/asteroid_gold.tscn" id="7_ni4at"]
[ext_resource type="PackedScene" uid="uid://spawyagdix2l" path="res://environment/asteroid_currency.tscn" id="8_4386i"]
[ext_resource type="AudioStream" uid="uid://573sa0ty1ijq" path="res://art/john_music.mp3" id="10_jgd8c"]
[ext_resource type="Texture2D" uid="uid://buxv4ti37ibjg" path="res://drive-download-20240529T170724Z-001/backgrounds/SpaceBackground.png" id="10_llcs6"]
[ext_resource type="PackedScene" uid="uid://dtaxi8qyupagt" path="res://units/mother.tscn" id="10_s0gld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0p3if"]
size = Vector2(12629, 661)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27xsa"]
size = Vector2(11759, 841)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbdm2"]
size = Vector2(1069, 7027)

[node name="host" type="Node2D"]
script = ExtResource("1_2xvqe")

[node name="Ui" parent="." instance=ExtResource("2_0ti17")]
visible = false

[node name="command_manager" type="Node2D" parent="."]
z_index = 6
position = Vector2(6.10352e-05, 0)
script = ExtResource("3_d50m1")

[node name="begunga" type="Camera2D" parent="."]
zoom = Vector2(0.133, 0.133)

[node name="world_boundary" type="StaticBody2D" parent="."]
collision_layer = 3855
collision_mask = 3855

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_boundary"]
position = Vector2(63.5, -3033.5)
shape = SubResource("RectangleShape2D_0p3if")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="world_boundary"]
position = Vector2(12.5, 3148.5)
shape = SubResource("RectangleShape2D_27xsa")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="world_boundary"]
position = Vector2(5344.5, 40.5)
shape = SubResource("RectangleShape2D_cbdm2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="world_boundary"]
position = Vector2(-5332, 155)
shape = SubResource("RectangleShape2D_cbdm2")

[node name="mother2" parent="." instance=ExtResource("10_s0gld")]
position = Vector2(4587, 2)
scale = Vector2(-1, 1)
team = 1

[node name="controllable_unit4" parent="." instance=ExtResource("4_thblo")]
position = Vector2(3960, -24)
rotation = 3.14159
team = 1

[node name="controllable_unit5" parent="." instance=ExtResource("4_thblo")]
position = Vector2(3963, 0)
rotation = 3.14159
team = 1

[node name="controllable_unit6" parent="." instance=ExtResource("4_thblo")]
position = Vector2(3960, 23)
rotation = 3.14159
team = 1

[node name="controllable_unit" parent="." instance=ExtResource("4_thblo")]
position = Vector2(-3766, -25)

[node name="controllable_unit2" parent="." instance=ExtResource("4_thblo")]
position = Vector2(-3763, -1)

[node name="controllable_unit3" parent="." instance=ExtResource("4_thblo")]
position = Vector2(-3766, 22)

[node name="asteroid_gnome_flesh5" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(2589, -1487)

[node name="asteroid_gold5" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(2435, -1236)

[node name="asteroid_currency5" parent="." instance=ExtResource("8_4386i")]
position = Vector2(2401, -925)

[node name="asteroid_gnome_flesh6" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(2655, 847)

[node name="asteroid_gold6" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(2501, 1098)

[node name="asteroid_currency6" parent="." instance=ExtResource("8_4386i")]
position = Vector2(2467, 1409)

[node name="asteroid_gnome_flesh3" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(-1963, -1727)

[node name="asteroid_gold3" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(-2117, -1476)

[node name="asteroid_currency3" parent="." instance=ExtResource("8_4386i")]
position = Vector2(-2151, -1165)

[node name="asteroid_gnome_flesh" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(97, -1611)

[node name="asteroid_gold" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(-57, -1360)

[node name="asteroid_currency" parent="." instance=ExtResource("8_4386i")]
position = Vector2(-91, -1049)

[node name="mother" parent="." instance=ExtResource("10_s0gld")]
position = Vector2(-4452, 23)

[node name="asteroid_gnome_flesh2" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(163, 723)

[node name="asteroid_gold2" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(9, 974)

[node name="asteroid_currency2" parent="." instance=ExtResource("8_4386i")]
position = Vector2(-25, 1285)

[node name="asteroid_gnome_flesh4" parent="." instance=ExtResource("6_p1jjs")]
position = Vector2(-1958, 820)

[node name="asteroid_gold4" parent="." instance=ExtResource("7_ni4at")]
position = Vector2(-2112, 1071)

[node name="asteroid_currency4" parent="." instance=ExtResource("8_4386i")]
position = Vector2(-2146, 1382)

[node name="SpaceBackground" type="Sprite2D" parent="."]
z_index = -3
scale = Vector2(5, 5)
texture = ExtResource("10_llcs6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_jgd8c")
volume_db = 6.0
autoplay = true

[connection signal="disable_mining" from="Ui" to="command_manager" method="_on_ui_disable_mining"]
[connection signal="disable_sentries" from="Ui" to="command_manager" method="_on_ui_disable_sentries"]
[connection signal="set_mining" from="Ui" to="command_manager" method="_on_ui_set_mining"]
[connection signal="set_sentry" from="Ui" to="command_manager" method="_on_ui_set_sentry"]
[connection signal="hide_toolbar" from="command_manager" to="Ui" method="_on_command_manager_hide_toolbar"]
[connection signal="show_toolbar" from="command_manager" to="Ui" method="_on_command_manager_show_toolbar"]
[connection signal="update_toolbar" from="command_manager" to="Ui" method="update_toolbar"]
[connection signal="ggs" from="mother2" to="." method="_on_mother_ggs"]
[connection signal="ggs" from="mother" to="." method="_on_mother_ggs"]
